<resources>
    <string name="app_name">App分享工具</string>
    <string name="maintitle">App分享工具-Powered by Sin Corporation</string>
    <string name="menu_settings">Settings</string>
    
    <string name="sharing">正在分享..</string>
    <string name="sharestop">已停止分享</string>
    <string name="defaultport">9011</string>
    <string name="url">url...........</string>
    <string name="string">string</string>
    <string name="getappinfosing">正在获取已安装的应用程序列表 ~~~</string>
	<string name="ok">好嘛 ~_~</string>
	<string name="nook">不好 !~!</string>
	<string name="enyes">嗯,是的!</string>
	<string name="notyes">哦,那不了~</string>
	<string name="wifierrtips">你的Wi-Fi并没有连接网络,这样的话其他手机没法与你的手机通信,也就没法获取你分享的软件了,还继续打开分享吗?</string>
	<string name="sharingtips">现在你已经打开了软件共享,其他手机可以通过浏览器访问\'%s\'来获取你共享的软件.</string>
	<string name="sharefail">打开分享失败,端口范围为1024~65535,请修改端口之后试试!</string>
	<string name="log">日志</string>
	<string name="tips">提示</string>
	<string name="shareokbut">打开分享成功,但是其他手机可能没法获取你的分享.</string>
	<string name="port">端口</string>
	<string name="downedmsg">%s 被下载~~~</string>
	<string name="exittips">你现在正在分享软件,如果退出的话将停止分享,确定退出吗?</string>
	<string name="iknow">好，我知道了~~</string>
</resources>