<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/padding_medium"
    android:orientation="vertical"
    tools:context="com.sin.android.sinlibs.activities.BaseActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="2dp"
        android:paddingRight="2dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/port"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/et_port"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ems="10"
            android:inputType="number"
            android:text="@string/defaultport" >

            <requestFocus />
        </EditText>

        <ToggleButton
            android:id="@+id/tb_change"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_medium"
            android:textOff="@string/sharestop"
            android:textOn="@string/sharing" />

        <Button
            android:id="@+id/btn_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/log" />

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_weight="1" />

        <CheckBox
            android:id="@+id/cb_selecttog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/url"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="gone" />

    <View
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_margin="1dp"
        android:background="@color/lightgreen" />

    <ListView
        android:id="@+id/lv_apps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>